# Shared_Utilities

./: .gitignore  SETUP.md  Shared_Utilities.code-workspace  pyproject.toml  vscode-extensions.txt
.copilot/: instructions.md
scripts/: change_from_template_to_project.ps1  sync_environment_to_pyproject.ps1  update_dependencies_to_latest.ps1  update_poetry_from_pyproject.ps1  update_poetry_lock.ps1
src/: update_vscode-extensions.txt
